# Formulation-AI

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml  deepseek-review.yml  deploy-backend.yml  deploy-frontend.yml  deploy.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_users.py  0002_seed_demo_users.py  0003_fix_demo_user_logins.py  0004_portfolio_project_entities.py  0005_seed_demo_data.py  0006_add_model_used_to_formulations.py  0007_user_abilities.py  0008_seed_demo_researcher.py  0009_add_user_name_fields_and_manage_users.py  0010_teams_table_and_drop_owner_name.py  0011_app_settings.py  ba932e929341_add_optimizer_columns.py  e4144dcdb2c8_add_optimizer_columns.py  fa3cabb616cf_add_optimizer_columns.py
backend/src/formulation_ai/: app.py  auth.py  config.py  db.py
backend/src/formulation_ai/models/: __init__.py  ability.py  app_setting.py  base.py  formulation.py  ingredient.py  iteration.py  output_property.py  portfolio.py  project.py  team.py  user.py  user_ability.py
backend/src/formulation_ai/optimizer/: __init__.py  acquisition.py  candidate_selector.py  gp_model.py  gp_proposal.py  scaler.py
backend/src/formulation_ai/routers/: admin.py  auth.py  ingredients.py  projects.py  teams.py
backend/src/formulation_ai/schemas/: auth.py  ingredient.py  project.py
backend/src/formulation_ai/services/: crypto.py  proposal_engine.py  xlsx_parser.py
backend/tests/: test_optimizer.py  test_provider_settings.py
docs/: glossary.md
docs/Workflow/: New Product Development Process.xlsx  data_objects.md  workflow.md
docs/upload-samples/: detergent-sample-results.md  detergent-sample.xlsx  epoxy-adhesive-sample-results.md  epoxy-adhesive-sample.xlsx
docs/upload-template/: README.md  generate.py  paint-example-results.md  paint-example.xlsx  template.xlsx
experiments/: Quad Model.xlsx
experiments/quad-model-proposal/: .gitignore  Quad Model.xlsx  README.md  propose.py
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  Logo.tsx  ProtectedRoute.tsx  StatusBadge.tsx
frontend/src/data/: fixtures.ts  types.ts
frontend/src/lib/: api.ts  auth.tsx
frontend/src/pages/: HomePage.tsx  IngredientsPage.tsx  LoginPage.tsx  PortfolioPage.tsx  (+3 more)
(+13 files in other folders)
